tests/bytes-param/more-bytes-than-expected.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
 --> $DIR/more-bytes-than-expected.rs:4:12
  |
4 | #[bitfield(bytes = 4)]
  |            ^^^^^
  |
  = note: source type: `_::ExpectedBytes` (32 bits)
  = note: target type: `Base` (48 bits)
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
